--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 
 .container {
   min-height: 100vh;
-  background-color: black;
+  background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -26,9 +26,12 @@ body {
   width: 320px;
   height: 450px;
   background-color: var(--app-color);
-  border-radius: 20px;
   overflow: hidden;
+  border-radius: 20px;
   position: relative;
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 .card .imgContainer {
